2014-07-28  Zoltan Horvath  <zoltan@webkit.org>

        [CSS3-Text] Adjust text-justify implementation to the latest spec
        https://bugs.webkit.org/show_bug.cgi?id=135317

        Reviewed by Darin Adler.

        Text-justify no longer accepts the following values: Inter-ideograph, inter-
        cluster, and kashida. This patch removes them and updates the tests as well.

        [1] http://dev.w3.org/csswg/css-text-3/#propdef-text-justify

        Updated existing tests.

        * css/CSSParser.cpp:
        (WebCore::isValidKeywordPropertyAndValue):
        * css/CSSPrimitiveValueMappings.h:
        (WebCore::CSSPrimitiveValue::CSSPrimitiveValue):
        (WebCore::CSSPrimitiveValue::operator TextJustify):
        * css/CSSValueKeywords.in:
        * rendering/style/RenderStyle.cpp:
        (WebCore::RenderStyle::changeRequiresLayout):
        * rendering/style/RenderStyleConstants.h:
        * rendering/style/StyleRareInheritedData.h:

2014-07-28  Radu Stavila  <stavila@adobe.com>

        REGRESSION (r169105): Crash in selection
        https://bugs.webkit.org/show_bug.cgi?id=134303

        Reviewed by Mihnea Ovidenie.

        When splitting the selection between different subtrees, all subtrees must have their selection cleared before
        starting to apply the new selection. Otherwise, when selecting objects in a named flow thread and going up
        its containing block chain, we can end up in the view's selection root, which has not yet been updated and so
        we get inconsistent data.

        To achieve this goal, the selection update was split into a "clear" and an "apply" method. The updateSelectionForSubtrees
        method first iterates through all subtrees and performs the "clear" method and then starts all over again
        and performs the "apply" method.

        Test: fast/regions/selection/crash-deselect.html

        * WebCore.xcodeproj/project.pbxproj:
        * rendering/RenderSelectionInfo.h: